# scalac-package-symbols-plugin

./: .gitignore  LICENSE  README.md  WORKSPACE  build.sh  dependencies.yaml  package.sh  publish.sh  test.sh  update_dependencies.sh
src/jvm/com/wbertelsen/packagesymbols/scalac/plugin/exported/: BUILD.bazel  EmitExportedSymbolsPlugin.scala  scalac-plugin.xml
src/jvm/com/wbertelsen/packagesymbols/scalac/plugin/used/: BUILD.bazel  EmitUsedSymbolsPlugin.scala  scalac-plugin.xml
src/jvm/io/fsq/buildgen/plugin/exported/: BUILD.bazel  EmitExportedSymbolsPlugin.scala  scalac-plugin.xml
src/jvm/io/fsq/buildgen/plugin/used/: BUILD.bazel  EmitUsedSymbolsPlugin.scala  scalac-plugin.xml
src/jvm/io/fsq/common/scala/: BUILD.bazel  Identity.scala  Lists.scala  TryO.scala
test/jvm/com/wbertelsen/packagesymbols/scalac/plugin/used/test/: BUILD.bazel  EmitUsedSymbolsPluginTest.scala  SampleFileForPluginTests.scala
test/jvm/io/fsq/buildgen/plugin/used/test/: BUILD.bazel  EmitUsedSymbolsPluginTest.scala
